<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:orientation="vertical"
    tools:context="com.ignacioruben7.agenda.MainActivity">

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <ImageView
            android:src="@drawable/contacts_48"
            android:layout_gravity="center_vertical"
            android:id="@+id/imgName"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />
        <EditText
            android:id="@+id/textName"
            android:layout_width="match_parent"
            android:hint="@string/text_name"
            android:layout_height="wrap_content" />
    </LinearLayout>

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:onClick="mostrarCalendario">
        <ImageView
            android:src="@drawable/calendar_48"
            android:layout_gravity="center_vertical"
            android:id="@+id/imgName"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:onClick="mostrarCalendario" />
        <EditText
            android:id="@+id/textFecha"
            android:editable="false"
            android:layout_width="match_parent"
            android:hint="@string/text_fecha"
            android:layout_height="wrap_content"
            android:onClick="mostrarCalendario" />
    </LinearLayout>

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <ImageView
            android:src="@drawable/phone_48"
            android:layout_gravity="center_vertical"
            android:id="@+id/imgName"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />
        <EditText
            android:id="@+id/textPhone"
            android:inputType="number"
            android:layout_width="match_parent"
            android:hint="@string/text_phone"
            android:layout_height="wrap_content" />
    </LinearLayout>
    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <ImageView
            android:src="@drawable/message_filled_50"
            android:layout_gravity="center_vertical"
            android:id="@+id/imgName"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />
        <EditText
            android:layout_below="@+id/textPhone"
            android:id="@+id/textEmail"
            android:inputType="textEmailAddress"
            android:layout_width="match_parent"
            android:hint="@string/text_email"
            android:layout_height="wrap_content" />
    </LinearLayout>
    <EditText
        android:inputType="textCapSentences"
        android:minHeight="30dp"
        android:layout_below="@+id/textEmail"
        android:id="@+id/textDesc"
        android:layout_width="match_parent"
        android:height="100dp"
        android:hint="@string/text_desc"
        android:layout_height="wrap_content" />
    <Button
        android:id="@+id/btnNext"
        android:layout_width="match_parent"
        android:paddingLeft="0dp"
        android:text="@string/btn_Next"
        android:theme="@style/RaisedBotton"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true" />
</LinearLayout>
